--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.montserrat-font {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+body {
+    background-color: #f6fcff;
+    padding: 0;
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
+  }
+  
+  input::placeholder,
+  textarea::placeholder {
+    font-family: "Montserrat", sans-serif;
+  }
+  
+  input:focus,
+  textarea:focus {
+    outline: none;
+  }
+  
+  a,
+  nav button {
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    color: #000;
+    transition: 0.4s;
+    font-size: 1em;
+    cursor: pointer;
+    font-family: "Montserrat", sans-seri;
+  }
+  
+  a:hover,
+  nav button:hover {
+    color: #bbb;
+  }
